--- a/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
+++ b/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
@@ -110,9 +110,13 @@ em_llik_gp$fit("Gaussian", "constant", estimate_nugget=FALSE)
 em_llik <- llikEmulatorGP("em_llik", em_llik_gp, default_conditional=default_conditional, 
                           default_normalize=default_normalize, lik_par=inv_prob$sig2_true, 
                           use_fixed_lik_par=TRUE)
-em_llik$plot_llik_pred_1d(test_info$input, include_CI=TRUE, true_llik=test_info$llik, CI_prob=CI_prob)
+emulator_pred_llik <- em_llik$emulator_model$predict(test_info$input, return_cov=TRUE)
+
+em_llik$plot_pred_1d(test_info$input, include_CI=TRUE, true_llik=test_info$llik, 
+                     CI_prob=CI_prob, plot_type="llik", emulator_pred_list=emulator_pred_llik)
 em_llik$plot_samp_1d(test_info$input, lik_par_val=inv_prob$sig2_true, N_samp=5, 
-                     plot_type="lik", true_llik=test_info$llik, include_design=TRUE)
+                     plot_type="lik", true_llik=test_info$llik, include_design=TRUE, 
+                     emulator_pred_list=emulator_pred_llik)
 
 # Forward model emulator.
 em_fwd_gp <- gpWrapperHet(design_info$input, matrix(design_info$fwd, ncol=1), normalize_output=TRUE, scale_input=TRUE)
@@ -121,10 +125,11 @@ em_fwd <- llikEmulatorFwdGaussDiag("em_fwd", em_fwd_gp, y, sig2=inv_prob$sig2_tr
                                    default_conditional=default_conditional, 
                                    default_normalize=default_normalize, use_fixed_lik_par=TRUE, 
                                    par_names=rownames(par_prior_params))
+emulator_pred_fwd <- em_fwd$emulator_model$predict(test_info$input, return_cov=TRUE)
+
 em_fwd$emulator_model$plot_pred_1d(test_info$input, CI_prob=CI_prob, Y_new=matrix(test_info$fwd, ncol=1))[[1]]
 em_fwd$plot_samp_1d(test_info$input, N_samp=5, plot_type="lik", true_llik=test_info$llik, include_design=TRUE)
 
-test <- em_fwd$sample_emulator(test_info$input, N_samp=5, use_cov=TRUE)
 ```
 
 
