--- a/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
+++ b/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
@@ -112,8 +112,8 @@ em_llik <- llikEmulatorGP("em_llik", em_llik_gp, default_conditional=default_con
                           use_fixed_lik_par=TRUE)
 emulator_pred_llik <- em_llik$emulator_model$predict(test_info$input, return_cov=TRUE)
 
-em_llik$plot_pred_1d(test_info$input, include_CI=TRUE, true_llik=test_info$llik, 
-                     CI_prob=CI_prob, plot_type="llik", emulator_pred_list=emulator_pred_llik)
+em_llik$plot_pred_1d(test_info$input, include_interval=TRUE, true_llik=test_info$llik, 
+                     CI_prob=CI_prob, plot_type="llik", emulator_pred_list=emulator_pred_llik, interval_method="CI")
 em_llik$plot_samp_1d(test_info$input, lik_par_val=inv_prob$sig2_true, N_samp=5, 
                      plot_type="lik", true_llik=test_info$llik, include_design=TRUE, 
                      emulator_pred_list=emulator_pred_llik)
@@ -127,8 +127,9 @@ em_fwd <- llikEmulatorFwdGaussDiag("em_fwd", em_fwd_gp, y, sig2=inv_prob$sig2_tr
                                    par_names=rownames(par_prior_params))
 emulator_pred_fwd <- em_fwd$emulator_model$predict(test_info$input, return_cov=TRUE)
 
-em_fwd$emulator_model$plot_pred_1d(test_info$input, CI_prob=CI_prob, Y_new=matrix(test_info$fwd, ncol=1))[[1]]
-em_fwd$plot_samp_1d(test_info$input, N_samp=5, plot_type="lik", true_llik=test_info$llik, include_design=TRUE)
+em_fwd$emulator_model$plot_pred_1d(test_info$input, CI_prob=CI_prob, Y_new=matrix(test_info$fwd, ncol=1), pred_list=emulator_pred_fwd)[[1]]
+em_fwd$plot_samp_1d(test_info$input, N_samp=5, plot_type="lik", true_llik=test_info$llik, 
+                    include_design=TRUE, emulator_pred_list=emulator_pred_fwd)
 
 ```
 
