--- a/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
+++ b/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
@@ -87,7 +87,6 @@ plot(test_info$input, exp(test_info$llik), type="l",
 # 
 # Initial design and fit emulators. 
 #
-#
 
 seed_init_design <- 23
 set.seed(seed_init_design)
@@ -110,13 +109,7 @@ em_llik_gp$fit("Gaussian", "constant", estimate_nugget=FALSE)
 em_llik <- llikEmulatorGP("em_llik", em_llik_gp, default_conditional=default_conditional, 
                           default_normalize=default_normalize, lik_par=inv_prob$sig2_true, 
                           use_fixed_lik_par=TRUE)
-emulator_pred_llik <- em_llik$emulator_model$predict(test_info$input, return_cov=TRUE)
-
-em_llik$plot_pred_1d(test_info$input, include_interval=TRUE, true_llik=test_info$llik, 
-                     CI_prob=CI_prob, plot_type="lik", emulator_pred_list=emulator_pred_llik, interval_method="pm_std_dev")
-em_llik$plot_samp_1d(test_info$input, lik_par_val=inv_prob$sig2_true, N_samp=5, 
-                     plot_type="lik", true_llik=test_info$llik, include_design=TRUE, 
-                     emulator_pred_list=emulator_pred_llik)
+emulator_pred_llik <- em_llik$predict_emulator(test_info$input, return_cov=TRUE)
 
 # Forward model emulator.
 em_fwd_gp <- gpWrapperHet(design_info$input, matrix(design_info$fwd, ncol=1), normalize_output=TRUE, scale_input=TRUE)
@@ -125,7 +118,18 @@ em_fwd <- llikEmulatorFwdGaussDiag("em_fwd", em_fwd_gp, y, sig2=inv_prob$sig2_tr
                                    default_conditional=default_conditional, 
                                    default_normalize=default_normalize, use_fixed_lik_par=TRUE, 
                                    par_names=rownames(par_prior_params))
-emulator_pred_fwd <- em_fwd$emulator_model$predict(test_info$input, return_cov=TRUE)
+emulator_pred_fwd <- em_fwd$predict_emulator(test_info$input, return_cov=TRUE)
+```
+
+
+```{r}
+# Plots 
+
+em_llik$plot_pred_1d(test_info$input, include_interval=TRUE, true_llik=test_info$llik, 
+                     CI_prob=CI_prob, plot_type="lik", emulator_pred_list=emulator_pred_llik, interval_method="pm_std_dev")
+em_llik$plot_samp_1d(test_info$input, lik_par_val=inv_prob$sig2_true, N_samp=5, 
+                     plot_type="lik", true_llik=test_info$llik, include_design=TRUE, 
+                     emulator_pred_list=emulator_pred_llik)
 
 # TODO: check `true_llik` in the plotting function. 
 em_fwd$plot_pred_1d(test_info$input, emulator_pred_list=emulator_pred_fwd, 
@@ -134,10 +138,23 @@ em_fwd$emulator_model$plot_pred_1d(test_info$input, CI_prob=CI_prob, Y_new=matri
 em_fwd$plot_samp_1d(test_info$input, N_samp=5, plot_type="lik", true_llik=test_info$llik, 
                     include_design=TRUE, emulator_pred_list=emulator_pred_fwd)
 
+
+pred_marg <- em_fwd$get_lik_approx(test_info$input, approx_type="marginal", emulator_pred_list=emulator_pred_fwd)
+pred_mean <- em_fwd$get_lik_approx(test_info$input, approx_type="mean", emulator_pred_list=emulator_pred_fwd)
+plot(test_info$input, pred_marg, type="l", col="green")
+lines(test_info$input, pred_mean)
+lines(test_info$input, exp(test_info$llik), col="red")
+
+
+plot_curves_1d_helper(test_info$input, cbind(marginal=pred_marg, mean=pred_mean), 
+                      y_new=exp(test_info$llik), X_design=design_info$input, 
+                      y_design=exp(design_info$llik), plot_title="Likelihood Approximations",
+                      xlab="u", ylab="Likelihood")
+
+
+
+
 ```
-
-
-
 
 
 
