Working on getting initial plots in latex doc and formatting them properly.

--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -478,7 +478,8 @@ year = {2021}
 }
 
 % Calibrate, Emulate, Sample. 
-% Utilize Ensemble Kalman Inversion (EKI) or Ensemble Kalman Sampling (EKI) as cheap design method. 
+% Utilize Ensemble Kalman Inversion (EKI) or Ensemble Kalman Sampling (EKI) as cheap design method for 
+% fititng a GP emulator. 
 @article{CES,
 	doi = {10.1016/j.jcp.2020.109716},
 	url = {https://doi.org/10.1016\%2Fj.jcp.2020.109716},  
