More progress on plot formatting.

--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -494,7 +494,7 @@ year = {2021}
 }
 
 % Log-likelihood emulation. Sequential design using entropy of lognormal likelihood approx. They mention plugging 
- % in approx to the density and running MCMC but don't explain how. 
+ % in approximation to the density and running MCMC but don't explain how. 
 @article{landslideCalibration,
 	doi = {https://doi.org/10.1007/s10346-022-01857-z},
 	url = {https://doi.org/10.1007/s10346-022-01857-z},  
