--- a/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
+++ b/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
@@ -30,6 +30,12 @@ source(file.path(src_dir, "mcmc_calibration_functions.r"))
 source(file.path(src_dir, "seq_design_gp.r"))
 source(file.path(src_dir, "seq_design.r"))
 source(file.path(src_dir, "gp_mcmc_functions.r"))
+
+# Plot settings. 
+design_pt_size <- 4
+line_thickness <- 1.5
+design_color <- "red"
+
 ```
 
 
@@ -129,11 +135,15 @@ CI_prob <- pnorm(1) - pnorm(-1) # i.e., plot +/- 1 std dev
 
 # (1): Plot the underlying GP emulator predictive distributions.  
 plt_gp_dist_llik <- em_llik$emulator_model$plot_pred_1d(test_info$input, include_interval=TRUE, interval_method="CI",
-                                                        CI_prob=CI_prob, pred_list=emulator_pred_llik, 
-                                                        Y_new=matrix(test_info$llik, ncol=1), plot_title="GP predictions [llik]")[[1]]
+                                                        CI_prob=CI_prob, pred_list=emulator_pred_llik, ylab="L(u)",
+                                                        Y_new=matrix(test_info$llik, ncol=1), line_thickness=line_thickness,
+                                                        design_color=design_color, design_pt_size=design_pt_size, 
+                                                        plot_title="GP predictions [llik]")[[1]] %>% ggformat_journal()
 plt_gp_dist_fwd <- em_fwd$emulator_model$plot_pred_1d(test_info$input, include_interval=TRUE, interval_method="CI",
-                                                      CI_prob=CI_prob, pred_list=emulator_pred_fwd, 
-                                                      Y_new=matrix(test_info$fwd, ncol=1), plot_title="GP predictions [fwd]")[[1]]
+                                                      CI_prob=CI_prob, pred_list=emulator_pred_fwd, ylab="G(u)",
+                                                      Y_new=matrix(test_info$fwd, ncol=1), line_thickness=line_thickness,
+                                                      design_color=design_color, design_pt_size=design_pt_size, 
+                                                      plot_title="GP predictions [fwd]")[[1]] %>% ggformat_journal()
 
 plot(plt_gp_dist_llik)
 plot(plt_gp_dist_fwd)
@@ -144,12 +154,14 @@ ggsave(file.path(output_dir, "gp_dist_fwdem.png"), plt_gp_dist_fwd)
 # (2): Plot the log-likelihood emulator predictive distributions. 
 plt_llik_dist_llik <- em_llik$plot_pred_1d(test_info$input, emulator_pred_list=emulator_pred_llik,
                                            plot_type="llik", include_interval=TRUE, interval_method="CI", 
-                                           true_llik=test_info$llik, CI_prob=CI_prob,
-                                           plot_title="log-likelihood predictions [llik]")
+                                           true_llik=test_info$llik, CI_prob=CI_prob, line_thickness=line_thickness,
+                                           design_color=design_color, design_pt_size=design_pt_size,
+                                           plot_title="log-likelihood predictions [llik]", ylab="L(u)") %>% ggformat_journal()
 plt_llik_dist_fwd <- em_fwd$plot_pred_1d(test_info$input, emulator_pred_list=emulator_pred_fwd,
                                          plot_type="llik", include_interval=TRUE, interval_method="pm_std_dev", 
-                                         true_llik=test_info$llik, CI_prob=CI_prob,
-                                         plot_title="log-likelihood predictions [fwd]")
+                                         true_llik=test_info$llik, CI_prob=CI_prob, ylab="L(u)",
+                                         design_color=design_color, design_pt_size=design_pt_size,
+                                         plot_title="log-likelihood predictions [fwd]") %>% ggformat_journal()
 
 plot(plt_llik_dist_llik)
 plot(plt_llik_dist_fwd)
@@ -160,13 +172,15 @@ ggsave(file.path(output_dir, "llik_dist_fwdem.png"), plt_llik_dist_fwd)
 # (3): Plot the likelihood emulator predictive distributions. 
 plt_lik_dist_llik <- em_llik$plot_pred_1d(test_info$input, emulator_pred_list=emulator_pred_llik,
                                           plot_type="lik", include_interval=TRUE, interval_method="CI", 
-                                          true_llik=test_info$llik, CI_prob=CI_prob,
-                                          plot_title="likelihood predictions [llik]")
+                                          true_llik=test_info$llik, CI_prob=CI_prob, line_thickness=line_thickness,
+                                          design_color=design_color, design_pt_size=design_pt_size, ylab="exp L(u)",
+                                          plot_title="likelihood predictions [llik]") %>% ggformat_journal()
 # TODO: why doesnt this throw an error when using "CI"?
 plt_lik_dist_fwd <- em_fwd$plot_pred_1d(test_info$input, emulator_pred_list=emulator_pred_fwd, 
                                         plot_type="lik", include_interval=TRUE, interval_method="pm_std_dev", 
-                                        true_llik=test_info$llik, CI_prob=CI_prob,
-                                        plot_title="likelihood predictions [fwd]") + ggtheme_journal()
+                                        true_llik=test_info$llik, CI_prob=CI_prob, line_thickness=line_thickness,
+                                        design_color=design_color, design_pt_size=design_pt_size, ylab="exp L(u)",
+                                        plot_title="likelihood predictions [fwd]") %>% ggformat_journal() 
 
 plot(plt_lik_dist_llik)
 plot(plt_lik_dist_fwd)
